added usersFileManager